--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
+  "homepage": "https://sidhant-ships.github.io/me",
   "name": "me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "@apollo/react-hooks": "^3.1.4",
+    "apollo-boost": "^0.4.4",
+    "colorthief": "^2.3.0",
+    "graphql": "^14.5.8",
+    "react-easy-emoji": "^1.3.0",
+    "react-headroom": "^3.0.0",
+    "react-reveal": "^1.2.2",
+    "react-twitter-embed": "3.0.3",
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
