--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "homepage": "https://sidhant-ships.github.io/me",
+  "homepage": "https://sidhant-ships.github.io/Me",
   "name": "me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
     "@apollo/react-hooks": "^3.1.4",
     "apollo-boost": "^0.4.4",
     "colorthief": "^2.3.0",
+    "gh-pages": "^3.1.0",
     "graphql": "^14.5.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-easy-emoji": "^1.3.0",
     "react-headroom": "^3.0.0",
     "react-reveal": "^1.2.2",
-    "react-twitter-embed": "3.0.3",
-    "gh-pages": "^3.1.0"
+    "react-scripts": "3.4.3",
+    "react-twitter-embed": "3.0.3"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
